fdo#81182: Resizing glTF window affects camera position

Camera moves by click and drag, with checking the last mouse
position we can make sure click was done inside the window
before drag.
Resizing can trigger drag event, but not click event.

Change-Id: I9e8b70fcb4a0abf26e76e03cafd026f940eceb10